--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,14 @@
   <title>LunchCode</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
+  <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
-<body >
+<body>
   <app-root class="main"></app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
